Revert "split out the search microservice"
This reverts commit 492128c363f3a827b3b35cba6facf1a9b2951990.
